--- a/src/Blog/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Blog/CoreBundle/Resources/translations/messages.es.yml
@@ -4,5 +4,6 @@ by: por
 readmore: Leer mas
 
 post:
-	plural: Posts
-	on: Publicado en
+  plural: Posts
+  latest: Ultimos posts
+  on: Publicado en
